ui/k8s/chatbot-ui.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: chatbot-ui
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: chatbot-ui
  name: chatbot-ui
  labels:
    app: chatbot-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chatbot-ui
  template:
    metadata:
      labels:
        app: chatbot-ui
    spec:
      containers:
        - name: chatbot-ui
          image: lucasycosta/chatbot-ui:latest
          resources: {}
          ports:
            - containerPort: 3000
          # envFrom:
          #   - configMapRef:
          #       name: chatbot-ui.yaml
---
kind: Service
apiVersion: v1
metadata:
  namespace: chatbot-ui
  name: chatbot-ui
  labels:
    app: chatbot-ui
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
  selector:
    app: chatbot-ui
  type: ClusterIP
