ui/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chatbot-ui
  namespace: chatbot-ui
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:  
    - host: localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend: 
              service:
                name: chatbot-ui
                port:
                  number: 3000
